--- a/fl-app/package.json
+++ b/fl-app/package.json
@@ -23,6 +23,8 @@
     "@angular/router": "^4.2.4",
     "angular-in-memory-web-api": "~0.4.0",
     "core-js": "^2.4.1",
+    "moment": "^2.19.1",
+    "ngx-progressbar": "^2.1.1",
     "rxjs": "^5.4.2",
     "zone.js": "^0.8.14"
   },
