--- a/fl-app/package.json
+++ b/fl-app/package.json
@@ -21,11 +21,12 @@
     "@angular/platform-browser": "^5.1.2",
     "@angular/platform-browser-dynamic": "^5.1.2",
     "@angular/router": "^5.1.2",
+    "@ngx-progressbar/core": "^3.0.2",
+    "@ngx-progressbar/http-client": "^3.0.2",
     "angular-in-memory-web-api": "~0.5.2",
     "core-js": "^2.4.1",
     "moment": "^2.19.1",
     "ng2-nvd3": "^2.0.0",
-    "ngx-progressbar": "^2.1.1",
     "rxjs": "^5.4.2",
     "zone.js": "^0.8.14"
   },
