--- a/fl-app/package.json
+++ b/fl-app/package.json
@@ -27,6 +27,7 @@
     "core-js": "^2.4.1",
     "moment": "^2.19.1",
     "ng2-nvd3": "^2.0.0",
+    "ngx-cookie-service": "^1.0.10",
     "rxjs": "^5.4.2",
     "zone.js": "^0.8.14"
   },
