--- a/fl-app/package.json
+++ b/fl-app/package.json
@@ -24,6 +24,7 @@
     "@ngx-progressbar/core": "^3.0.2",
     "@ngx-progressbar/http-client": "^3.0.2",
     "angular-in-memory-web-api": "~0.5.2",
+    "angular2-focus": "^1.1.2",
     "core-js": "^2.4.1",
     "moment": "^2.19.1",
     "ng2-nvd3": "^2.0.0",
