--- a/fl-app/package.json
+++ b/fl-app/package.json
@@ -12,35 +12,38 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^7.2.13",
-    "@angular/common": "^7.2.13",
-    "@angular/compiler": "^7.2.13",
-    "@angular/core": "^7.2.13",
-    "@angular/forms": "^7.2.13",
+    "@angular/animations": "^8.1.1",
+    "@angular/cdk": "^8.0.2",
+    "@angular/common": "^8.1.1",
+    "@angular/compiler": "^8.1.1",
+    "@angular/core": "^8.1.1",
+    "@angular/forms": "^8.1.1",
     "@angular/http": "^7.2.13",
-    "@angular/platform-browser": "^7.2.13",
-    "@angular/platform-browser-dynamic": "^7.2.13",
-    "@angular/router": "^7.2.13",
+    "@angular/material": "^8.0.2",
+    "@angular/platform-browser": "^8.1.1",
+    "@angular/platform-browser-dynamic": "^8.1.1",
+    "@angular/router": "^8.1.1",
     "@ngx-progressbar/core": "^3.0.2",
     "@ngx-progressbar/http-client": "^3.0.2",
     "angular-in-memory-web-api": "^0.8.0",
     "angular2-focus": "^1.1.2",
     "core-js": "^2.4.1",
+    "hammerjs": "^2.0.8",
     "install": "^0.12.2",
     "moment": "^2.19.1",
     "ng2-nvd3": "^2.0.0",
     "ngx-cookie-service": "^1.0.10",
     "npm": "^6.9.1",
-    "rxjs": "^6.5.1",
+    "rxjs": "^6.5.2",
     "rxjs-compat": "^6.0.0-rc.0",
     "tslib": "^1.9.0",
-    "zone.js": "^0.8.14"
+    "zone.js": "^0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.13.0",
-    "@angular/cli": "^7.3.8",
-    "@angular/compiler-cli": "^7.2.13",
-    "@angular/language-service": "^7.2.13",
+    "@angular-devkit/build-angular": "~0.801.1",
+    "@angular/cli": "^8.1.1",
+    "@angular/compiler-cli": "^8.1.1",
+    "@angular/language-service": "^8.1.1",
     "@types/jasmine": "~2.8.2",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~8.5.2",
@@ -56,6 +59,6 @@
     "protractor": "^6.0.0",
     "ts-node": "~4.1.0",
     "tslint": "~5.8.0",
-    "typescript": "^3.2.4"
+    "typescript": "^3.4.5 <3.5.0"
   }
 }
