--- a/fl-app/src/app/services/AppAPI.json
+++ b/fl-app/src/app/services/AppAPI.json
@@ -3,6 +3,7 @@
   "templates_url":"http:\/\/localhost:8888\/fablab\/wp-content\/plugins\/fablab-ticket\/views\/templates\/",
   "api_url":"http:\/\/localhost:8888\/fablab\/api\/",
   "sharing_url":"http:\/\/localhost:4200\/fablab\/wp-json\/sharepl\/v1\/",
+  "rest_v2_url":"http:\/\/localhost:4200\/fablab\/wp-json\/sharepl\/v2\/",
   "nonce":"d59c4e0daa",
   "is_user_logged_in":false,
   "is_terminal":true
