--- a/fl-app/package.json
+++ b/fl-app/package.json
@@ -23,6 +23,8 @@
     "@angular/platform-browser": "^8.1.1",
     "@angular/platform-browser-dynamic": "^8.1.1",
     "@angular/router": "^8.1.1",
+    "@ngrx/effects": "^8.3.0",
+    "@ngrx/store": "^8.3.0",
     "@ngx-progressbar/core": "^3.0.2",
     "@ngx-progressbar/http-client": "^3.0.2",
     "angular-in-memory-web-api": "^0.8.0",
@@ -32,6 +34,7 @@
     "install": "^0.12.2",
     "moment": "^2.19.1",
     "ng2-nvd3": "^2.0.0",
+    "ngrx-tslint-rules": "^1.6.0",
     "ngx-cookie-service": "^1.0.10",
     "npm": "^6.9.1",
     "rxjs": "^6.5.2",
